# AetherOS

./: .gitignore  Cargo.toml  Makefile  POST_MVP_ENHANCEMENTS_UI_AND_FUNDING.md  README.md
.github/workflows/: ci.yml
bindings/aether-py/: Cargo.toml  README.md  pyproject.toml
bindings/aether-py/python/aetheros/: __init__.py  identity.py  lease.py  ledger.py  time_utils.py
bindings/aether-py/src/: lib.rs
bindings/aether-py/tests/: test_roundtrip.py
config/: default.yaml
config/alerting/: rules.yml
crates/aether-core/: Cargo.toml
crates/aether-core/src/: autonomy.rs  canonical.rs  constitution.rs  error.rs  evidence.rs  glob.rs  identity.rs  lease.rs  lib.rs  policy.rs  transparency.rs
docs/: openapi.json
docs/architecture/: overview.md
docs/future/: PHASE10_ledger_durability_draft.py
examples/: incident_demo.py
python/: README.md  pyproject.toml
python/aetheros_orchestrator/: __init__.py  adaptive_autonomy.py  admin.py  analytics.py  api.py  audit_exporter.py  auth.py  autonomy.py  collaboration.py  compliance.py  config.py  constitution.py  durable_memory.py  engine.py  events.py  gateway.py  governance.py  graph.py  health.py  identity_provider.py  intent_compiler.py  ledger_store.py  marketplace.py  mcp_adapter.py  memory.py  metrics_exporter.py  models.py  planner.py  policy.py  rate_limiter.py  revocation_store.py  run_service.py  run_state_store.py  sandbox.py  sandbox_backends.py  secret_box.py  tenancy.py  token_keystore.py  tools.py  trace_log.py  (+3 more)
python/tests/: test_phase10_ledger_durability.py  test_phase11_collaboration_marketplace_api.py  test_phase12_auth.py  test_phase13_run_state_durability.py  test_phase14_per_tenant_eddsa.py  test_phase15_durable_revocation.py  test_phase16_at_rest_encryption.py  test_phase17_rate_limiting.py  test_phase18_key_rotation.py  test_phase19_audit_export.py  test_phase1_foundations.py  test_phase20_tracing.py  test_phase21_health_tracing_correlation.py  test_phase22_prometheus_admin.py  test_phase23_shutdown_alerting.py  test_phase24_openapi_contract.py  test_phase25_sse_events.py  test_phase2_langgraph.py  test_phase2_orchestration.py  test_phase3_governance.py  test_phase4_mcp_sandbox.py  test_phase5_api.py  test_phase6_adaptive_autonomy.py  test_phase6_analytics.py  test_phase6_identity.py  test_phase6_sandbox_backends.py  test_phase6_tenancy.py  test_phase7_api.py  test_phase7_collaboration.py  test_phase7_compliance.py  test_phase7_constitution.py  test_phase7_marketplace.py  test_phase8_transparency.py  test_phase9_transparency_api.py  test_phase9b_witness.py  test_phase9c_cosigned_api.py
scripts/: generate_openapi.py  run_desktop.sh
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/surfaces/: AdminSurface.tsx  AnalyticsSurface.tsx  ComplianceSurface.tsx  ConstitutionSurface.tsx  EvidenceViewer.tsx  ExecutionCanvas.tsx  IntentConsole.tsx  TenantSwitcher.tsx
