[workspace]
resolver = "2"
members = [
    "crates/aether-core",
    "bindings/aether-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["AetherOS Team"]
repository = "https://github.com/harsha-mangena/AetherOS"
description = "Trusted execution kernel for enterprise AI agents"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
hex = "0.4"
thiserror = "2"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
