[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetheros-orchestrator"
version = "0.6.0"
description = "AetherOS orchestration layer: intent compilation, governed task graphs, hybrid memory, MCP + sandbox, control-plane API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AetherOS Team" }]
dependencies = [
    "aetheros-core",
    "pydantic>=2.7,<3",
    "pyyaml>=6",
]

[project.optional-dependencies]
orchestration = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
mcp = [
    "mcp>=1.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]
test = [
    "pytest>=8",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["aetheros_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
