[package]
name = "aetheros-desktop"
version = "0.5.0"
description = "AetherOS desktop shell (Tauri)"
authors = ["AetherOS Team"]
edition = "2021"
rust-version = "1.77"

# This crate is the native desktop shell. It is intentionally excluded from the core
# Rust workspace (see root Cargo.toml `exclude`) so that `cargo test` on the security
# core never pulls in the heavy webview/GUI toolchain. Build the desktop app via the
# Tauri CLI (`npm run tauri build`) from the ui/ directory.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
